1998-11-13  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm (collect): New syntax.  Similar to begin but returns
	a list of the results of all forms in the sequence instead of the
	result of the last form.

1998-11-10  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm (values, call-with-values): Moved here from
	syncase.scm.

	* syncase.scm (values, call-with-values): Moved to boot-9.scm.

	* boot-9.scm (readline-options, readline-enable, readline.disable,
	readline-set!: New options interface.

	* readline.scm (readline-port): Use readline-options-interface.

1998-11-05  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm: Set the repl start module in `top-repl' instead of
	at the end of boot-9.scm.

1998-11-01  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* emacs.scm (format): Bugfix: Handle multiple arguments
	correctly.  (Thanks to Thien-Thi Nguyen.)

1998-11-01  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm (exit-hook): New hook: Is run at the very end of an
	interactive session.
	(top-repl): Run exit-hook on exit.

	* readline.scm (readline-port): Maybe read history; Maybe write
	history at exit (add to exit-hook).

Fri Oct 30 15:15:37 1998  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* readline.scm (make-readline-port): Bugfixed last change...

1998-10-28  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* readline.scm (make-readline-port): Don't set prompt to "... " if
	read line was empty.

1998-10-19  Jim Blandy  <jimb@zwingli.cygnus.com>

	* boot-9.scm, debug.scm, expect.scm, hcons.scm, lineio.scm,
 	r4rs.scm, slib.scm, threads.scm: Update copyright years.

	* getopt-gnu-style.scm, slib.scm: Add copyright notice.

	Talked to Stallman.  Actually, the syntax-case copyright is no
	problem.  Duh.
	* Makefile.am (ice9_sources): Revert last change.
	* syncase.scm, psyntax.pp, psyntax.ss: Added again.
	* Makefile.in: Regeneretade.

	* boot-9.scm: Don't assume that this file is loaded just before